--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,26 @@
 body {
   background: rgb(230, 209, 156);
+  text-align: center;
 }
 
 h1 {
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+h3 {
+  color: rgb(179, 127, 59);
+}
+
+p {
+  padding: 40px;
+}
+
+a {
+  padding: 10px;
+}
+img {
+  border: blanchedalmond;
+  border-radius: 15px;
 }
